# wai

./: Cargo.toml  README.md  WAI.md  WIT.md  browser.d.ts  browser.js  demo.d.ts  demo.js  index.html  intrinsics.js  main.js  publish.sh  release.toml
.github/workflows/: main.yml  releases.yml
crates/cli/: Cargo.toml
crates/gen-c/: Cargo.toml
crates/gen-c/src/: lib.rs
crates/gen-c/tests/: codegen.rs
crates/gen-core/: Cargo.toml
crates/gen-core/src/: lib.rs
crates/gen-js/: Cargo.toml
crates/gen-js/src/: lib.rs
crates/gen-js/tests/: codegen.rs  helpers.js  runtime.rs
crates/gen-markdown/: Cargo.toml
crates/gen-markdown/src/: lib.rs
crates/gen-rust/: Cargo.toml
crates/gen-rust-wasm/: Cargo.toml
crates/gen-rust-wasm/src/: lib.rs
crates/gen-rust-wasm/tests/: codegen.rs
crates/gen-rust/src/: lib.rs
crates/gen-spidermonkey/: Cargo.toml
crates/gen-spidermonkey/spidermonkey-wasm/: bindgen.cpp
crates/gen-spidermonkey/src/: lib.rs
crates/gen-spidermonkey/tests/: codegen-smw.rs
crates/gen-wasmer/: Cargo.toml
crates/gen-wasmer-py/: Cargo.toml
crates/gen-wasmer-py/src/: dependencies.rs  lib.rs  source.rs
crates/gen-wasmer-py/tests/: codegen.rs  runtime.rs
crates/gen-wasmer/src/: lib.rs
crates/gen-wasmer/tests/: codegen.rs  runtime.rs
crates/gen-wasmtime/: Cargo.toml
crates/gen-wasmtime-py/: Cargo.toml
crates/gen-wasmtime-py/src/: dependencies.rs  lib.rs  source.rs
crates/gen-wasmtime-py/tests/: codegen.rs  runtime.rs
crates/gen-wasmtime/src/: lib.rs
crates/gen-wasmtime/tests/: codegen.rs
crates/parser/: Cargo.toml
crates/parser/src/: abi.rs  lib.rs
crates/parser/src/ast/: lex.rs  resolve.rs
crates/parser/tests/: all.rs
crates/parser/tests/ui/: embedded.wai.md  import-me-too.wai.md  import-me-too.wit.md  imports-from-wai-md.wai
crates/parser/tests/ui/parse-fail/: async.wai.result  async1.wit.result  bad-resource2.wai.result  duplicate-functions.wai.result  empty-enum.wai.result  empty-union.wit.result  import-cycle2-v1.wit.result  import-cycle2-v2.wai.result
crates/rust-wasm/: Cargo.toml
crates/rust-wasm-impl/: Cargo.toml
crates/rust-wasm-impl/src/: lib.rs
crates/rust-wasm/src/: futures.rs  lib.rs
crates/test/: Cargo.toml  expanded.rs
crates/test-helpers/: Cargo.toml  build.rs
crates/test-helpers/src/: lib.rs
crates/test-rust-wasm/: Cargo.toml
crates/test/src/: lib.rs
crates/wai-bindgen-demo/: Cargo.toml  build.sh  demo.wai  main.ts
crates/wai-bindgen-demo/src/: lib.rs
crates/wai-component/: Cargo.toml  README.md
crates/wai-component/src/: cli.rs  decoding.rs  encoding.rs  lib.rs  printing.rs  validation.rs
crates/wai-component/tests/: components.rs  interfaces.rs  roundtrip.rs
crates/wasmer/: Cargo.toml
crates/wasmer-impl/: Cargo.toml
crates/wasmer-impl/src/: lib.rs
crates/wasmer/src/: lib.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime-impl/: Cargo.toml
crates/wasmtime-impl/src/: lib.rs
crates/wasmtime/src/: lib.rs
crates/wit-bindgen-demo/: Cargo.toml  demo.wit  index.html
crates/wit-bindgen-demo/src/: lib.rs
crates/wit-component/: Cargo.toml
crates/wit-component/src/: cli.rs  decoding.rs  encoding.rs  lib.rs  printing.rs  validation.rs
crates/wit-component/tests/: components.rs  interfaces.rs  roundtrip.rs
crates/witx-bindgen-demo/: Cargo.toml  demo.witx  index.html  main.ts
crates/witx-bindgen-demo/src/: lib.rs
tests/: README.md
tests/runtime/async_functions/: host.ts  wasm.rs
tests/runtime/buffers/: host-wasmer.rs
tests/runtime/flavorful/: host-wasmer.py  host-wasmer.rs  host.rs  host.ts  wasm.rs
tests/runtime/handles/: host-wasmer.py  host-wasmer.rs  host.rs  host.ts  wasm.rs
tests/runtime/invalid/: host-wasmer.rs  host.rs  host.ts  wasm.rs
tests/runtime/js_instantiate/: host.ts
tests/runtime/lists/: host-wasmer.rs  host.rs  host.ts  wasm.rs
tests/runtime/many_arguments/: host-wasmer.py  host-wasmer.rs  host.rs  host.ts  wasm.rs
tests/runtime/numbers/: host-wasmer.py  host-wasmer.rs  host.rs  host.ts  wasm.rs
tests/runtime/records/: host-wasmer.rs  host.rs  host.ts  wasm.rs
tests/runtime/smoke/: host-wasmer.rs  host.rs  host.ts  wasm.rs
tests/runtime/smw_functions/: ignore_host.rs
tests/runtime/smw_lists/: ignore_host.rs
tests/runtime/smw_strings/: ignore_host.rs
tests/runtime/unions/: host-wasmer.py  wasm.rs
tests/runtime/variants/: host-wasmer.rs  host.rs  host.ts  wasm.rs
