[package]
name = "wai-bindgen-cli"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
description = "A language bindings generator for wit."

[workspace]
members = [
  "crates/test-rust-wasm",
  "crates/wai-bindgen-demo",
  "crates/wai-component",
]
resolver = "2"

[[bin]]
name = "wai-bindgen"
test = false

[dependencies]
anyhow = "1.0"
structopt = { version = "0.3", default-features = false }
wai-bindgen-gen-core = { path = 'crates/gen-core' }
wai-bindgen-gen-rust-wasm = { path = 'crates/gen-rust-wasm', features = [
  'structopt',
] }
wai-bindgen-gen-wasmtime = { path = 'crates/gen-wasmtime', features = [
  'structopt',
] }
wai-bindgen-gen-wasmtime-py = { path = 'crates/gen-wasmtime-py', features = [
  'structopt',
] }
wai-bindgen-gen-js = { path = 'crates/gen-js', features = ['structopt'] }
wai-bindgen-gen-c = { path = 'crates/gen-c', features = ['structopt'] }
wai-bindgen-gen-markdown = { path = 'crates/gen-markdown', features = [
  'structopt',
] }
wai-bindgen-gen-spidermonkey = { path = 'crates/gen-spidermonkey', features = [
  'structopt',
] }
wai-bindgen-gen-wasmer = { path = 'crates/gen-wasmer', features = [
  'structopt',
] }
wai-bindgen-gen-wasmer-py = { path = 'crates/gen-wasmer-py', features = [
  'structopt',
] }

# Compiling `spidermonkey.wasm` takes way too long without this.
[profile.dev.package.cranelift-codegen]
debug-assertions = false
opt-level = 2

[package.metadata.wapm]
namespace = "wasmer"
abi = "wasi"
