[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Wasmer Engineering Team <engineering@wasmer.io>",
]
edition = "2021"
homepage = "https://wasmer.io/"
license = "APACHE-2.0"
readme = "README.md"
repository = "https://github.com/wasmerio/wit-bindgen"
# required by [workspace.package]
rust-version = "1.64"
version = "0.2.0-rc.1"

# Compiling `spidermonkey.wasm` takes way too long without this.
[profile.dev.package.cranelift-codegen]
debug-assertions = false
opt-level = 2
