
[package]
name = "wai-bindgen-cli"
description = "A language bindings generator for wit."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "wai-bindgen"
test = false

[dependencies]
anyhow = "1.0"
structopt = { version = "0.3", default-features = false }
wai-bindgen-gen-core = { path = '../gen-core' }
wai-bindgen-gen-rust-wasm = { path = '../gen-rust-wasm', features = [
    'structopt',
] }
wai-bindgen-gen-wasmtime = { path = '../gen-wasmtime', features = [
    'structopt',
] }
wai-bindgen-gen-wasmtime-py = { path = '../gen-wasmtime-py', features = [
    'structopt',
] }
wai-bindgen-gen-js = { path = '../gen-js', features = ['structopt'] }
wai-bindgen-gen-c = { path = '../gen-c', features = ['structopt'] }
wai-bindgen-gen-markdown = { path = '../gen-markdown', features = [
    'structopt',
] }
wai-bindgen-gen-spidermonkey = { path = '../gen-spidermonkey', features = [
    'structopt',
] }
wai-bindgen-gen-wasmer = { path = '../gen-wasmer', features = ['structopt'] }
wai-bindgen-gen-wasmer-py = { path = '../gen-wasmer-py', features = [
    'structopt',
] }

[package.metadata.wapm]
namespace = "wasmer"
abi = "wasi"
