
[package]
name = "wai-bindgen-cli"
description = "A language bindings generator for wit."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "wai-bindgen"
test = false

[dependencies]
anyhow = "1.0"
structopt = { version = "0.3", default-features = false }
wai-bindgen-gen-core = { path = "../gen-core", version = "0.2.0" }
wai-bindgen-gen-rust-wasm = { path = "../gen-rust-wasm", version = "0.2.0", features = [
    "structopt",
] }
wai-bindgen-gen-wasmtime = { path = "../gen-wasmtime", version = "0.2.0", features = [
    "structopt",
] }
wai-bindgen-gen-wasmtime-py = { path = "../gen-wasmtime-py", version = "0.2.0", features = [
    "structopt",
] }
wai-bindgen-gen-js = { path = "../gen-js", version = "0.2.0", features = [
    "structopt",
] }
wai-bindgen-gen-c = { path = "../gen-c", version = "0.2.0", features = [
    "structopt",
] }
wai-bindgen-gen-markdown = { path = "../gen-markdown", version = "0.2.0", features = [
    "structopt",
] }
wai-bindgen-gen-spidermonkey = { path = "../gen-spidermonkey", version = "0.2.0", features = [
    "structopt",
] }
wai-bindgen-gen-wasmer = { path = "../gen-wasmer", version = "0.2.0", features = [
    "structopt",
] }
wai-bindgen-gen-wasmer-py = { path = "../gen-wasmer-py", version = "0.2.0", features = [
    "structopt",
] }

[package.metadata.wapm]
namespace = "wasmer"
abi = "wasi"
