[package]
name = "wai-bindgen-gen-core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
wai-parser = { path = "../parser", version = "0.1.1" }
anyhow = "1"
