[package]
name = "wai-bindgen-gen-core"
description = "Core abstractions for wai-bindgen"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
wai-parser = { path = "../parser", version = "0.2.2" }
anyhow = "1"
