[package]
name = "wai-bindgen-gen-markdown"
description = "Generate Markdown API docs for a WAI interface"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
heck = "0.3"
pulldown-cmark = { version = "0.8", default-features = false }
structopt = { version = "0.3", default-features = false, optional = true }
wai-bindgen-gen-core = { path = "../gen-core", version = "0.2.2" }
