[package]
name = "wasmer-wit-bindgen-gen-rust-wasm"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0"
description = "wit-bindgen-gen-c"

[lib]
test = false
doctest = false

[dependencies]
wasmer-wit-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
wasmer-wit-bindgen-gen-rust = { path = '../gen-rust', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

# [dev-dependencies]
# wasmer-wit-bindgen-rust = { version = "0.1.1", path = '../rust-wasm' }
# wasmer-wit-bindgen-test-helpers = { version = "0.1.1", path = '../test-helpers', features = ['wasm-rust'] }
