[package]
name = "wai-bindgen-gen-rust-wasm"
authors.metadata = true
edition.metadata = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.metadata = true
version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wai-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
wai-bindgen-gen-rust = { path = '../gen-rust', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
wai-bindgen-rust = { path = '../rust-wasm' }
test-helpers = { path = '../test-helpers', features = [
    'wai-bindgen-gen-rust-wasm',
] }
