[package]
name = "wai-bindgen-gen-rust-wasm"
description = "Generate WAI glue for a Rust guest"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wai-bindgen-gen-core = { path = "../gen-core", version = "0.2.3" }
wai-bindgen-gen-rust = { path = "../gen-rust", version = "0.2.3" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
wai-bindgen-rust = { path = "../rust-wasm" }
test-helpers = { path = "../test-helpers", features = [
    "wai-bindgen-gen-rust-wasm",
] }
