[package]
name = "wai-bindgen-gen-rust"
authors.metadata = true
edition.metadata = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.metadata = true
version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
wai-bindgen-gen-core = { path = '../gen-core' }
heck = "0.3"
