[package]
name = "wai-bindgen-gen-spidermonkey"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lazy_static = "1.4.0"
structopt = { version = "0.3", optional = true }
wasm-encoder = "0.8.0"
wai-bindgen-gen-core = { path = "../gen-core", version = "0.1.1" }
heck = "0.3"

[dev-dependencies]
test-helpers = { path = "../test-helpers", version = "0.0.0", features = [
    "wai-bindgen-gen-spidermonkey",
] }
wasmparser = "0.80"
