[package]
name = "wasmer-wit-bindgen-gen-wasmer-py"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0"
description = "wit-bindgen-gen-c"

[lib]
doctest = false
test = false

[dependencies]
wasmer-wit-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
test-helpers = { version = "0.1.1", path = '../test-helpers' }
