[package]
name = "wai-bindgen-gen-wasmer-py"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
wai-bindgen-gen-core = { path = "../gen-core", version = "0.1.1" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
test-helpers = { path = "../test-helpers", version = "0.0.0", features = [
    "wai-bindgen-gen-wasmer-py",
] }
