[package]
name = "wai-bindgen-gen-wasmer"
authors.workspace = true
edition.metadata = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.metadata = true
version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wai-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
wai-bindgen-gen-rust = { path = '../gen-rust', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0"
test-helpers = { path = '../test-helpers', features = [
    'wai-bindgen-gen-wasmer',
] }
wai-bindgen-wasmer = { path = '../wasmer', features = ['tracing'] }

[dev-dependencies.wasmer]
git = "https://github.com/wasmerio/wasmer.git"
branch = "master"

[dev-dependencies.wasmer-wasi]
git = "https://github.com/wasmerio/wasmer.git"
branch = "master"
