[package]
name = "wai-bindgen-gen-wasmer"
description = "Generate WAI glue code for a Rust Wasmer host"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wai-bindgen-gen-core = { path = "../gen-core", version = "0.2.3" }
wai-bindgen-gen-rust = { path = "../gen-rust", version = "0.2.3" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0"
test-helpers = { path = "../test-helpers", features = [
    "wai-bindgen-gen-wasmer",
] }
wai-bindgen-wasmer = { path = "../wasmer", features = ["tracing"] }
wasmer = "3.0"
wasmer-wasi = "3.0"
