[package]
name = "wasmer-wit-bindgen-gen-wasmtime-py"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT"
description = "wit-bindgen-gen-c"

[dependencies]
wai-bindgen-gen-core = { path = "../gen-core", version = "0.2.1" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
test-helpers = { version = "0.1.1", path = '../test-helpers' }
