[package]
name = "wai-bindgen-gen-wasmtime-py"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wai-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers', features = [
    'wai-bindgen-gen-wasmtime-py',
] }
