[package]
name = "wasmer-wit-bindgen-gen-wasmtime"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0"
description = "wit-bindgen-gen-c"

[lib]
test = false
doctest = false

[dependencies]
wasmer-wit-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
wasmer-wit-bindgen-gen-rust = { path = '../gen-rust', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0"
test-helpers = { path = '../test-helpers', version = "0.1.1" }
wasmtime = "0.38.0"
wasmtime-wasi = "0.38.0"
wasmer-wit-bindgen-wasmtime = { path = '../wasmtime', features = ['tracing', 'async'] }
