[package]
name = "wai-parser"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
version.workspace = true

[dependencies]
id-arena = "2"
anyhow = "1.0"
pulldown-cmark = { version = "0.8", default-features = false }
wast = { version = "33", default-features = false, optional = true }
unicode-xid = "0.2.2"
unicode-normalization = "0.1.19"

[dev-dependencies]
rayon = "1"
serde_json = "1"
serde = { version = "1", features = ['derive'] }

[[test]]
name = "all"
harness = false
