[package]
name = "wasmer-wit-bindgen-rust-impl"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT"
description = "wit-bindgen-gen-c"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
wasmer-wit-bindgen-gen-core = { version = "0.1.1", path = "../gen-core" }
wasmer-wit-bindgen-gen-rust-wasm = { version = "0.1.1", path = "../gen-rust-wasm" }
