[package]
name = "wai-bindgen-rust"
description = "Generate WAI glue for a Rust guest"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wai-bindgen-rust-impl = { path = "../rust-wasm-impl", version = "0.1.1", optional = true }
async-trait = { version = "0.1.51", optional = true }
bitflags = "1.3"

[features]
default = ["macros", "async"]
macros = ["wai-bindgen-rust-impl"]
async = ["async-trait"]
