[package]
name = "test-helpers"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
publish = false
license = "MIT"
description = "wasmer-wit-bindgen-gen-c"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
backtrace = "0.3"
heck = "0.3"
ignore = "0.4"
proc-macro2 = "1.0.27"
quote = "1.0.9"
wasmer-wit-bindgen-gen-core = { version = "0.1.0", path = '../gen-core' }
wasmer-wit-bindgen-gen-rust-wasm = { version = "0.1.0", path = '../gen-rust-wasm', optional = true }
wasmer-wit-bindgen-gen-wasmtime = { version = "0.1.0", path = '../gen-wasmtime', optional = true }
wasmer-wit-bindgen-gen-wasmtime-py = { version = "0.1.0", path = '../gen-wasmtime-py', optional = true }
wasmer-wit-bindgen-gen-js = { version = "0.1.0", path = '../gen-js', optional = true }
wasmer-wit-bindgen-gen-c = { version = "0.1.0", path = '../gen-c', optional = true }
wasmer-wit-bindgen-gen-spidermonkey = { version = "0.1.0", path = '../gen-spidermonkey', optional = true }
wasmer-wit-bindgen-gen-wasmer = { version = "0.1.0", path = '../gen-wasmer', optional = true }
wasmer-wit-bindgen-gen-wasmer-py = { version = "0.1.0", path = '../gen-wasmer-py', optional = true }
wasmer-wit-parser = { version = "0.1.0", path = '../parser' }
filetime = "0.2"

[build-dependencies]
wasmer-wit-bindgen-gen-c = { version = "0.1.0", path = '../gen-c' }
wasmer-wit-bindgen-gen-spidermonkey = { version = "0.1.0", path = '../gen-spidermonkey' }
wasmer-wit-bindgen-gen-core = { version = "0.1.0", path = '../gen-core' }

[features]
default = ['wasm-rust', 'wasm-c', 'wasm-spidermonkey']
wasm-rust = []
wasm-c = []
wasm-spidermonkey = []
