[package]
name = "test-helpers"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
backtrace = "0.3"
heck = "0.3"
ignore = "0.4"
proc-macro2 = "1.0.27"
quote = "1.0.9"
wai-bindgen-gen-core = { path = '../gen-core' }
wai-bindgen-gen-rust-wasm = { path = '../gen-rust-wasm', optional = true }
wai-bindgen-gen-wasmtime = { path = '../gen-wasmtime', optional = true }
wai-bindgen-gen-wasmtime-py = { path = '../gen-wasmtime-py', optional = true }
wai-bindgen-gen-js = { path = '../gen-js', optional = true }
wai-bindgen-gen-c = { path = '../gen-c', optional = true }
wai-bindgen-gen-spidermonkey = { path = '../gen-spidermonkey', optional = true }
wai-bindgen-gen-wasmer = { path = '../gen-wasmer', optional = true }
wai-bindgen-gen-wasmer-py = { path = '../gen-wasmer-py', optional = true }
wai-parser = { path = '../parser' }
filetime = "0.2"

[build-dependencies]
wai-bindgen-gen-c = { path = '../gen-c' }
wai-bindgen-gen-spidermonkey = { path = '../gen-spidermonkey' }
wai-bindgen-gen-core = { path = '../gen-core' }

[features]
default = ['wasm-rust', 'wasm-c', 'wasm-spidermonkey']
wasm-rust = []
wasm-c = []
wasm-spidermonkey = []
