[package]
name = "test-rust-wasm"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
publish = false
license = "Apache-2.0"
description = "wit-bindgen-gen-c"

[dependencies]
futures-util = { version = "0.3.17", default-features = true }
wasmer-wit-bindgen-rust = { version = "0.1.1", path = "../rust-wasm" }

[features]
unchecked = []

[[bin]]
name = "smoke"
test = false

[[bin]]
name = "numbers"
test = false

[[bin]]
name = "records"
test = false

[[bin]]
name = "unions"
test = false

[[bin]]
name = "variants"
test = false

[[bin]]
name = "lists"
test = false

[[bin]]
name = "handles"
test = false

[[bin]]
name = "flavorful"
test = false

[[bin]]
name = "invalid"
test = false

[[bin]]
name = "async_functions"
test = false

[[bin]]
name = "many_arguments"
test = false
