[package]
name = "test-rust-wasm"
version = "0.2.1"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures-util = { version = "0.3.17", default-features = true }
wai-bindgen-rust = { path = "../rust-wasm", version = "0.2.1" }

[features]
unchecked = []

[[bin]]
name = "smoke"
test = false

[[bin]]
name = "numbers"
test = false

[[bin]]
name = "records"
test = false

[[bin]]
name = "unions"
test = false

[[bin]]
name = "variants"
test = false

[[bin]]
name = "lists"
test = false

[[bin]]
name = "handles"
test = false

[[bin]]
name = "flavorful"
test = false

[[bin]]
name = "invalid"
test = false

[[bin]]
name = "async_functions"
test = false

[[bin]]
name = "many_arguments"
test = false
