[package]
name = "wai-bindgen-wasmer-impl"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
wai-bindgen-gen-core = { path = "../gen-core", version = "0.1" }
wai-bindgen-gen-wasmer = { path = "../gen-wasmer", version = "0.1" }

[features]
tracing = []
async = []
