[package]
name = "wasmer-wit-bindgen-wasmer"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT"
description = "wit-bindgen-gen-c"

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1.50", optional = true }
bitflags = "1.2"
once_cell = "1.13"
thiserror = "1.0"
wasmer-wit-bindgen-wasmer-impl = { path = "../wasmer-impl", version = "0.1.1" }
tracing-lib = { version = "0.1.26", optional = true, package = 'tracing' }
async-trait = { version = "0.1.50", optional = true }

[dependencies.wasmer]
git = "https://github.com/wasmerio/wasmer.git"
branch = "master"

[features]
# Enables generated code to emit events via the `tracing` crate whenever wasm is
# entered and when native functions are called. Note that tracin is currently
# only done for imported functions.
tracing = ["tracing-lib", "wai-bindgen-wasmer-impl/tracing"]

# Enables async support for generated code, although when enabled this still
# needs to be configured through the macro invocation.
async = ["async-trait", "wai-bindgen-wasmer-impl/async"]
