[package]
name = "wai-bindgen-wasmer"
description = "Generate WAI glue for a Rust Wasmer host"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1.50", optional = true }
bitflags = "1.2"
once_cell = "1.13"
thiserror = "1.0"
tracing-lib = { version = "0.1.26", optional = true, package = "tracing" }
wai-bindgen-wasmer-impl = { path = "../wasmer-impl", version = "0.2.2" }
wasmer = {version = "3.0.0", default-features=false}

[features]
default=["sys"]
# Use this if the bindings are being used in an a program that isn't itself 
# being compiled to wasm
sys =["wasmer/sys-default"]

# Use this if the bindings are being used in an a program that is itself 
# being compiled to wasm
js = ["wasmer/js-default"]

# Enables generated code to emit events via the `tracing` crate whenever wasm is
# entered and when native functions are called. Note that tracin is currently
# only done for imported functions.
tracing = ["tracing-lib", "wai-bindgen-wasmer-impl/tracing"]

# Enables async support for generated code, although when enabled this still
# needs to be configured through the macro invocation.
async = ["async-trait", "wai-bindgen-wasmer-impl/async"]
