[package]
name = "wit-bindgen-wasmtime-impl"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT"
description = "wit-bindgen-gen-c"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
wai-bindgen-gen-core = { path = "../gen-core", version = "0.2.1" }
wai-bindgen-gen-wasmtime = { path = "../gen-wasmtime", version = "0.2.1" }

[features]
tracing = []
async = []
