[package]
name = "wasmer-wit-bindgen-wasmtime-impl"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0"
description = "wit-bindgen-gen-c"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
wasmer-wit-bindgen-gen-core = { path = "../gen-core", version = "0.1.0" }
wasmer-wit-bindgen-gen-wasmtime = { path = "../gen-wasmtime", version = "0.1.0" }

[features]
tracing = []
async = []
